--- a/drag-and-drop/limitation/index.html
+++ b/drag-and-drop/limitation/index.html
@@ -13,5 +13,6 @@
 	</div>
 	
 	<textarea class="textarea" placeholder="Введите текст..."></textarea>
+	<script src="js/limit.js"></script>
 </body>
 </html>
